fix: update responsivity on mobile

--- a/src/components/UI/Login/Login.css
+++ b/src/components/UI/Login/Login.css
@@ -87,8 +87,7 @@
   .login-content {
     max-width: unset;
     width: 70%;
-    height: 60%;
-    gap: 3rem;
+    padding: 2rem;
   }
 
   .login-content__form {
@@ -97,12 +96,14 @@
 
   .login-content__form-field input {
     padding: 1rem;
+    font-size: 1rem;
   }
 
   .login-content .btn {
     padding: 1rem;
     min-width: 100%;
     margin-top: 0.5rem;
+    font-size: 1rem;
   }
 
   .login-alternative-option {
